--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <h1>
         This is the Folder which is being Tracked by Git
     </h1>
-    <h1>
-        This a new added line!
-    </h1>
-
     <p>A new line in our file!</p>
+    <p>This line is here to show how merging works.</p>
 </body>
 </html>
